# kazusa-home-portal

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  config.py  db.py  main.py  schemas.py
app/migrations/: 001_init.sql  002_api_tokens.sql  003_sessions_metadata.sql
app/static/: admin.html  common.css  common.js  index.html  login.html  manifest.json  sessions.html  sw.js  tokens.html
docs/: acl.md  api-tokens.md  migrations.md  qr-login.md  security.md  sessions.md
