[project]
name = "kazusa-home-portal"
version = "2.1.0"
description = "Docker-label-based service dashboard + auth gateway"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "docker>=7",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "slowapi>=0.1.9",
    "segno>=1.6",
    "pydantic>=2.0",
]
